<?xml version="1.0"?>
<package>
  <name>miivii_orbslam2_ros</name>
  <version>0.1.0</version>
  <description>MiiVii VSlam</description>

  <maintainer email="yli@miivii.com">Yang Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend> 

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <build_depend>tf</build_depend> 
</package>
