<?xml version="1.0"?>
<package>
  <name>ORB_SLAM2</name>
  <version>0.1.0</version>
  <description>MiiVii VSlam</description>

  <maintainer email="yli@miivii.com">Yang Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <export>
  </export>
</package>
